test/langtools/tools/javac/valhalla/value-objects/CheckObjectMethodsUsage.out
CheckObjectMethodsUsage.java:11:17: compiler.err.value.class.may.not.override: finalize
CheckObjectMethodsUsage.java:15:14: compiler.warn.has.been.deprecated.for.removal: finalize(), java.lang.Object
CheckObjectMethodsUsage.java:15:23: compiler.err.value.class.does.not.support: finalize
CheckObjectMethodsUsage.java:16:13: compiler.err.value.class.does.not.support: wait
CheckObjectMethodsUsage.java:17:19: compiler.err.value.class.does.not.support: wait
CheckObjectMethodsUsage.java:18:13: compiler.err.value.class.does.not.support: wait
CheckObjectMethodsUsage.java:19:19: compiler.err.value.class.does.not.support: wait
CheckObjectMethodsUsage.java:20:13: compiler.err.value.class.does.not.support: wait
CheckObjectMethodsUsage.java:21:19: compiler.err.value.class.does.not.support: wait
CheckObjectMethodsUsage.java:22:15: compiler.err.value.class.does.not.support: notify
CheckObjectMethodsUsage.java:23:21: compiler.err.value.class.does.not.support: notify
CheckObjectMethodsUsage.java:24:18: compiler.err.value.class.does.not.support: notifyAll
CheckObjectMethodsUsage.java:25:24: compiler.err.value.class.does.not.support: notifyAll
12 errors
1 warning
